--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/tranpduy26/TPD-MyPortfolio"
   },
-  "author": "Vu Quan",
+  "author": "Phuong Duy",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/tranpduy26/TPD-MyPortfolio"
